manifests/monitoring/fluentd.yml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: monitoring
  labels:
    tier: monitoring
    name: fluentd
spec:
  template:
    metadata:
      labels:
        name: fluentd
    spec:
      containers:
       - image: weaveworksdemos/log-server
         name: fluentd
         volumeMounts:
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
      volumes:
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
      nodeSelector:
        beta.kubernetes.io/os: linux
