manifests/monitoring/grafana-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana-core
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      containers:
      - image: grafana/grafana:4.1.2
        name: grafana-core
        imagePullPolicy: IfNotPresent
        # env:
        ports:
        - name: web
          containerPort: 3000
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          periodSeconds: 1
          initialDelaySeconds: 300
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 10
        volumeMounts:
        - name: grafana-persistent-storage
          mountPath: /var
      volumes:
      - name: grafana-persistent-storage
        emptyDir: {}
      nodeSelector:
        beta.kubernetes.io/os: linux
