manifests/monitoring/nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: monitoring
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx
      component: core
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
        component: core
    spec:
      containers:
      - name: nginx
        image: nginx:1.12
        ports:
          - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 10
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
        - name: secret-volume
          mountPath: /mnt
      volumes:
      - name: config-volume
        configMap:
          name: nginx-ingress
      - name: secret-volume
        secret:
          secretName: nginx-ingress-basic-auth
      nodeSelector:
        beta.kubernetes.io/os: linux
