manifests/monitoring/elasticsearch.yml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: monitoring
  labels:
    name: elasticsearch
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    name: elasticsearch
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: monitoring
  labels:
    name: elasticsearch
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: elasticsearch
    spec:
      containers:
      - image: elasticsearch:5.5.0
        name: elasticsearch
        ports:
        - name: elasticsearch
          containerPort: 9200
        livenessProbe:
          tcpSocket:
            port: 9200
          initialDelaySeconds: 60
          periodSeconds: 3
        readinessProbe:
          tcpSocket:
            port: 9200
          periodSeconds: 3
        volumeMounts:
        - name: elasticsearch-pv
          mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: elasticsearch-pv
          persistentVolumeClaim:
            claimName: elasticsearch-pvc
      nodeSelector:
        beta.kubernetes.io/os: linux
