manifests/monitoring/kibana.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: monitoring
  labels:
    name: kibana
spec:
  type: NodePort
  ports:
  - port: 5601
    targetPort: 5601    
    nodePort: 30104
  selector:
    name: kibana
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: monitoring
  labels:
    name: kibana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: kibana
    spec:
      containers:
       - image: kibana
         name: kibana
         ports:
          - name: kibana
            containerPort: 5601
         readinessProbe:
          httpGet:
            path: /
            port: 5601
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 10
